fix skills on IE11

--- a/src/modules/Flipcard/styles.module.scss
+++ b/src/modules/Flipcard/styles.module.scss
@@ -83,3 +83,32 @@
     float: left;
     margin: 25px;
 }
+
+.react,
+.js,
+.java,
+.aws,
+.newrelic,
+.climbing,
+.photoshop,
+.scuba {
+    width: 100px;
+}
+
+.ts {
+    width: 140px;
+    height: auto;
+    margin: 5px;
+}
+
+.magic {
+    width: 100px;
+    height: auto;
+    margin: 58px 25px;
+}
+
+.magicJudging {
+    width: 100px;
+    height: auto;
+    margin: 45px 25px;
+}
